<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" >

            <TextView
                android:id="@+id/textView_15693_cardinfo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/text_null" />

            <Button
                android:id="@+id/button_15693_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/btn_15693_getinfo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/text_15693_prompt" />

            <EditText
                android:id="@+id/editText_15693_block"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/button_15693_demo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/btn_set" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_15693_selectitem" />

            <CheckBox
                android:id="@+id/checkBox_15693_lockblock"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ckb_15693_lockblock" />

            <CheckBox
                android:id="@+id/checkBox_15693_lockafi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ckb_15693_lockafi" />

            <CheckBox
                android:id="@+id/checkBox_15693_lockdsfid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ckb_15693_lockdsfid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_15693_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:text="@string/text_null" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>